--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/Websitecss/main.css">
+		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" >
+		<link rel="stylesheet" type="text/css" href="styles.css" >
 		<title>Jorge Caholo, The Main Character</title>
 	</head>
 	<body>
